2004-10-20  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amflush.c: Don't start a driver if nothing to flush.

2004-10-14  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Eric Siegerman <erics@telepres.com>

	* example/3hole.ps: Fix for multiple tape.

2004-10-04  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amverify.sh.in: Terminate if no tape online.

2004-09-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amadmin.c (main): Call check_dumpuser() as soon as posible.

2004-09-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.c (getconf_byname): Special case for typ == BOOL.

2004-09-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c (promote_hills): Use dumpcycle instead of
	  tapecycle.
	* example/amanda.conf.in: Remove warning for tapecyle set to inf.

2004-09-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amadmin.c (balance): Don't core dump if DUMPCYLE is too
	  big.

2004-09-15  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/tapetype.c: New -o option, doesn't overwrite amanda
	  tape without -o.
	* man/amtapetype.8.in: Document new -o option.

2004-09-15  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Works with failed dump to tape.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/sendbackup-gnutar.c (end_backup): Write warning message
	  in not fatal error.
	* server-src/dumper.c (process_dumpline): Parse warning message.
	* server-src/reporter.c (handle_strange): Print warning message in
	  the STRANGE summary.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driverio.c (free_serial): Set stable[s].dp to NULL.
	* server-src/driverio.c (disk2serial): Check that stable[s].dp == NULL.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Joe Rhett <jrhett@isite.net>
