@@ -1,3 +1,8 @@
+2004-10-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
+	* server-src/driver.c (dump_to_tape): Don't retry a dump indefinitely
+	  if dumper returns TRYAGAIN and taper returns DONE.
+
 2004-10-20  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
 	* server-src/amflush.c: Don't start a driver if nothing to flush.
